k8s/digital-twin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digital-twin-deployment
  namespace: default
  labels:
    app: pypy-digital-twin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pypy-digital-twin
  template:
    metadata:
      labels:
        app: pypy-digital-twin
    spec:
      containers:
        - name: digital-twin
          image: pypygrid/digital-twin:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
