k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: default
  labels:
    app: pypy-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pypy-worker
  template:
    metadata:
      labels:
        app: pypy-worker
    spec:
      containers:
        - name: celery-worker
          image: pypygrid/gateway:latest
          imagePullPolicy: IfNotPresent
          command: ["celery", "-A", "workers.simulation.tasks", "worker", "--loglevel=info"]
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beat-deployment
  namespace: default
  labels:
    app: pypy-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pypy-beat
  template:
    metadata:
      labels:
        app: pypy-beat
    spec:
      containers:
        - name: celery-beat
          image: pypygrid/gateway:latest
          imagePullPolicy: IfNotPresent
          command: ["celery", "-A", "workers.billing.tasks", "beat", "--loglevel=info"]
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
